remove hsts for subdomains as there are cases where we are using http only

--- a/templates/reverseproxy_ssl.conf.j2
+++ b/templates/reverseproxy_ssl.conf.j2
@@ -63,7 +63,7 @@ server {
    server_name {{ item.value.domains | join(' ') }};
 
 {% if item.value.hsts_max_age is defined %}
-   add_header Strict-Transport-Security "max-age={{ item.value.hsts_max_age }}; includeSubDomains; preload" always;
+   add_header Strict-Transport-Security "max-age={{ item.value.hsts_max_age }}; preload" always;
 {% endif %}
 
    access_log /var/log/nginx/{{ item.key }}_access.log;
