make sure that the Strict-Transport-Security Header is not set by the backend before adding a new one

--- a/templates/reverseproxy_ssl_letsencrypt.conf.j2
+++ b/templates/reverseproxy_ssl_letsencrypt.conf.j2
@@ -32,6 +32,7 @@ server {
    server_name {{ item.value.domains | join(' ') }};
 
 {% if item.value.hsts_max_age is defined %}
+   proxy_hide_header Strict-Transport-Security;
    add_header Strict-Transport-Security "max-age={{ item.value.hsts_max_age }}; preload" always;
 {% endif %}
 
